fixed almost any bug with STRONG tool in paragraph section.

--- a/Demo.htm
+++ b/Demo.htm
@@ -6,6 +6,7 @@
     <script src="jquery-1.7.2.min.js" type="text/javascript"></script>
     <script src="jquery-ui-1.8.19.custom.min.js" type="text/javascript"></script>
     <script src="rangy-core.js" type="text/javascript"></script>
+    <script src="RangeHelper.js" type="text/javascript"></script>
     <script src="NeatEditor.js" type="text/javascript"></script>
     <script src="Demo.js" type="text/javascript"></script>
 </head>
