--- a/Demo.htm
+++ b/Demo.htm
@@ -7,6 +7,7 @@
     <script src="jquery-ui-1.8.19.custom.min.js" type="text/javascript"></script>
     <script src="rangy-core.js" type="text/javascript"></script>
     <script src="RangeHelper.js" type="text/javascript"></script>
+    <script src="SanitizationHelper.js" type="text/javascript"></script>
     <script src="NeatEditor.js" type="text/javascript"></script>
     <script src="Demo.js" type="text/javascript"></script>
 </head>
