--- a/Demo.htm
+++ b/Demo.htm
@@ -9,6 +9,8 @@
     <script src="RangeHelper.js" type="text/javascript"></script>
     <script src="SanitizationHelper.js" type="text/javascript"></script>
     <script src="NeatEditor.js" type="text/javascript"></script>
+    <script src="NeatEditor.SectionProviders.Pragraph.js" type="text/javascript"></script>
+    <script src="NeatEditor.SectionProviders.Heading.js" type="text/javascript"></script>
     <script src="Demo.js" type="text/javascript"></script>
 </head>
 <body>
