--- a/Demo.htm
+++ b/Demo.htm
@@ -11,6 +11,7 @@
     <script src="NeatEditor.js" type="text/javascript"></script>
     <script src="NeatEditor.SectionProviders.Pragraph.js" type="text/javascript"></script>
     <script src="NeatEditor.SectionProviders.Heading.js" type="text/javascript"></script>
+    <script src="NeatEditor.SectionProviders.Image.js" type="text/javascript"></script>
     <script src="Demo.js" type="text/javascript"></script>
 </head>
 <body>
