--- a/Demo.htm
+++ b/Demo.htm
@@ -1,6 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
+    <meta charset="UTF-8">
     <title>NeatEditor demo</title>
     <link href="NeatEditor.css" rel="stylesheet" type="text/css" />
     <script src="jquery-1.7.2.min.js" type="text/javascript"></script>
@@ -8,6 +9,7 @@
     <script src="rangy-core.js" type="text/javascript"></script>
     <script src="RangeHelper.js" type="text/javascript"></script>
     <script src="SanitizationHelper.js" type="text/javascript"></script>
+    <script src="jquery.form.js" type="text/javascript"></script>
     <script src="NeatEditor.js" type="text/javascript"></script>
     <script src="NeatEditor.SectionProviders.Pragraph.js" type="text/javascript"></script>
     <script src="NeatEditor.SectionProviders.Heading.js" type="text/javascript"></script>
