added 3 type of headings to sections

--- a/Demo.htm
+++ b/Demo.htm
@@ -12,7 +12,9 @@
     <script src="jquery.form.js" type="text/javascript"></script>
     <script src="NeatEditor.js" type="text/javascript"></script>
     <script src="NeatEditor.SectionProviders.Pragraph.js" type="text/javascript"></script>
-    <script src="NeatEditor.SectionProviders.Heading.js" type="text/javascript"></script>
+    <script src="NeatEditor.SectionProviders.Heading1.js" type="text/javascript"></script>
+    <script src="NeatEditor.SectionProviders.Heading2.js" type="text/javascript"></script>
+    <script src="NeatEditor.SectionProviders.Heading3.js" type="text/javascript"></script>
     <script src="NeatEditor.SectionProviders.Image.js" type="text/javascript"></script>
     <script src="Demo.js" type="text/javascript"></script>
 </head>
